# RAG-NEWSLETTER

./: .gitignore  CHANGELOG.md  CI_CD_README.md  EMBEDDING_TEST_RESULTS.md  Makefile  README.md  SYSTEM_VALIDATION.md  TEST_RESULTS.md  env.example  ingestion_complete.py  install.sh  interactive_demo.py  pyproject.bak  pyproject.toml  pytest.ini  quick_start.py  test_simple.py
.github/workflows/: ci.yml
app/tests/: test_ci_smoke.py
downloads/: download_metadata.json
examples/: test_optimizations.py
scripts/: test-local.sh
src/rag_newsletter/: __main__.py
src/rag_newsletter/configs/: __init__.py  apple_silicon_config.py  optimization_config.py
src/rag_newsletter/embeddings/: __init__.py  embedding_service.py  vector_store.py
src/rag_newsletter/infra/: Dockerfile  docker-compose.yml  prometheus.yml
src/rag_newsletter/ingestion/: __init__.py  rag_ingestion.py  sharepoint_client.py
src/rag_newsletter/processing/: __init__.py  document_processor.py
src/rag_newsletter/tests/: test_ci_smoke.py
