[tool.poetry]
name = "rag-newsletter"
version = "0.2.0"
description = "RAG Newsletter with MLX-powered MCDSE embeddings"
authors = ["Votre Nom <vous@example.com>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "rag_newsletter"
from = "src"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# Azure/SharePoint Integration
msal = "^1.33.0"
requests = "^2.32.5"
pydantic-settings = "^2.10.1"
python-dotenv = "^1.1.1"

# MLX and ML Framework (optimized for Apple Silicon)
mlx = "^0.19.0"
mlx-lm = "^0.19.0"
torch = "^2.5.0"
torchvision = "^0.20.0"
transformers = "^4.47.0"
accelerate = "^0.30.0"

# Document Processing
pymupdf = "^1.23.0"
pillow = "^10.0.0"
pypdf = "^4.0.0"

# Vector Store and Search
qdrant-client = "^1.7.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"

# RAG Framework
langchain = "^0.1.0"
langchain-community = "^0.0.20"

# Utilities
typing-extensions = "^4.8.0"
tqdm = "^4.66.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.0.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
rag-newsletter = "rag_newsletter.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88